# QtCalc

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  calculator.ui  main.cpp
